Fix simple course - Fill in the blanks - Numbers and bullets are not aligned

--- a/css/main.less
+++ b/css/main.less
@@ -484,7 +484,7 @@ ul {
                 position: absolute;
                 display: inline-block;
                 margin-left: -22px;
-                margin-top: -5px;
+                margin-top: 6px;
                 width: 5px;
                 height: 5px;
                 border-radius: 50%;
@@ -531,6 +531,7 @@ ul {
                 text-align: right;
                 padding-right: 12px;
                 box-sizing: border-box;
+                line-height: 46px;
             }
 
             h1 {
